Revert "fix(TCOMP-2732): dynamic not overwritten (#893)"
This reverts commit d2f25c75f1bff3e09f6dfa376e56e68c94c2707e.